--- a/startpage.html
+++ b/startpage.html
@@ -15,12 +15,12 @@
           <ul class="menu-startpage">
             <li><a href="#" class="active-cards">Home</a></li>
             <li><a href="LysakE_Lesson3/Homework_les3/typeBoxing.html" target="_blank">Gallery</a></li>
-            <li><a href="#">Homeworks</a>
+            <li style="position: relative;"><a href="#">Homeworks</a>
             <ul class="second-ul">
                 <li><a href="lesson-7/index_1.html" target="_blank">Float</a></li>
-                <li><a href="lesson-6/cards/index.html" target="_blank">Inline-Block</a></li>
+                <li><a href="lesson-6/cards/index.html" target="_blank" style="white-space: nowrap;">Inline-Block</a></li>
                 <li><a href="Less4/list/index.html" target="_blank">Table</a></li>
-                <li><a href="#">Site</a>
+                <li style="position: relative;"><a href="#">Site</a>
                 <ul class="third-ul">
                     <li><a href="Amelia/index.html" target="_blank">Amelia</a></li>
                 </ul>
