fixed footer icons

--- a/startpage.html
+++ b/startpage.html
@@ -30,6 +30,9 @@
 
 
     <div class="wrapper-startpage">
+
+ 
+
       <div class="header-startpage">
         <div class="container-startpage">
 
@@ -54,7 +57,9 @@
       </div>
 
       <section class="title-pg">
-
+        <!-- <div>
+          <video class="video" src="video/1.mp4" width="100%" height="100%" autoplay muted loop></video>
+        </div> -->
             <div class="container-startpage flex-main-sec">
               <div class="flex-main-lf">
                 <h1>Title Text</h1>
@@ -72,19 +77,19 @@
 
       <div class="footer-startpage">
         <div class="container-startpage">
-            <svg class="icon">
+            <svg class="footer-icon">
               <use href="#facebook"></use>
             </svg>
 
-            <svg>
+            <svg class="footer-icon">
               <use href="#instagram"></use>
             </svg>
 
-            <svg>
+            <svg class="footer-icon">
               <use href="#telegram"></use>
             </svg>
 
-            <svg>
+            <svg class="footer-icon">
               <use href="#twitter"></use>
             </svg>
 
