added new svg in header

--- a/startpage.html
+++ b/startpage.html
@@ -15,16 +15,31 @@
       <div class="header-startpage">
         <div class="container-startpage">
           <ul class="menu-startpage">
-            <li><a href="#" class="active-cards">Home</a></li>
+            <li>
+              <a href="#" class="active-cards">
+                <svg class="header-icon">
+                  <use href="/img-titl-pg/sprite.svg#home"></use>
+                </svg>
+                <span>Home</span>
+              </a>
+            </li>
             <li>
               <a
                 href="LysakE_Lesson3/Homework_les3/typeBoxing.html"
-                target="_blank"
-                >Gallery</a
-              >
+                target="_blank">
+                <svg class="header-icon">
+                  <use href="/img-titl-pg/sprite.svg#gallery"></use>
+                </svg>
+                <span>Gallery</span>
+                </a>
             </li>
             <li style="position: relative">
-              <a href="#">Homeworks</a>
+              <a href="#">
+                <span>Homeworks</span>
+                <svg class="header-icon">
+                  <use href="/img-titl-pg/sprite.svg#arrow-down"></use>
+                </svg>
+              </a>
               <ul class="second-ul">
                 <li>
                   <a class="link" href="lesson-7/index_1.html" target="_blank"
@@ -46,7 +61,12 @@
                   >
                 </li>
                 <li style="position: relative">
-                  <a class="link" href="#">Site</a>
+                  <a class="link" href="#">
+                    <svg class="header-icon">
+                      <use href="/img-titl-pg/sprite.svg#arrow-left"></use>
+                    </svg>
+                    <span>Site</span>
+                  </a>
                   <ul class="third-ul">
                     <li>
                       <a href="Amelia/index.html" target="_blank">Amelia</a>
@@ -83,6 +103,7 @@
                 <svg class="footer-icon">
                   <use href="/img-titl-pg/sprite.svg#facebook"></use>
                 </svg>
+                <span>Facebook</span>
               </a>
             </li>
             <li>
@@ -90,6 +111,7 @@
                 <svg class="footer-icon">
                   <use href="/img-titl-pg/sprite.svg#instagram"></use>
                 </svg>
+                <span>Instagram</span>
               </a>
             </li>
             <li>
@@ -97,6 +119,7 @@
                 <svg class="footer-icon">
                   <use href="/img-titl-pg/sprite.svg#telegram"></use>
                 </svg>
+                <span>Telegram</span>
               </a>
             </li>
             <li>
@@ -104,6 +127,7 @@
                 <svg class="footer-icon">
                   <use href="/img-titl-pg/sprite.svg#twitter"></use>
                 </svg>
+                <span>Twitter</span>
               </a>
             </li>
           </ul>
