Added animation menu

--- a/startpage.html
+++ b/startpage.html
@@ -7,7 +7,7 @@
     <title>Cards</title>
     <link rel="stylesheet" href="css-main-pg/style.css" />
   </head>
-  <body class="body-startpg">
+  <body class="body-startpg" style="overflow-x: hidden;">
 
     <video autoplay loop muted class="video" src="/video/3.mp4"></video>
 
@@ -97,7 +97,7 @@
 
       <div class="footer-startpage">
         <div class="container-startpage">
-          <ul class="icon-list">
+          <ul class="icon-list footer-list">
             <li>
               <a href="https://www.messenger.com/?locale=ru_RU" target="_blank">
                 <svg class="footer-icon">
