fixed bugs at header list

--- a/startpage.html
+++ b/startpage.html
@@ -34,9 +34,9 @@
                 </a>
             </li>
             <li style="position: relative">
-              <a href="#">
+              <a class="homeworks" href="#">
                 <span>Homeworks</span>
-                <svg class="header-icon">
+                <svg class="header-icon-last">
                   <use href="/img-titl-pg/sprite.svg#arrow-down"></use>
                 </svg>
               </a>
