--- a/startpage.html
+++ b/startpage.html
@@ -97,7 +97,56 @@
 
       <div class="footer-startpage">
         <div class="container-startpage">
-          <ul class="icon-list footer-list">
+          <div class="social-media">
+            <h2>Social-media</h2> 
+
+        <div class="hover-footer">
+          <h2>Social-media</h2> 
+           <ul class="icon-list footer-list">
+            <li>
+              <a href="https://www.messenger.com/?locale=ru_RU" target="_blank">
+                <svg class="footer-icon">
+                  <use href="/img-titl-pg/sprite.svg#facebook"></use>
+                </svg>
+                 </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/" target="_blank">
+                <svg class="footer-icon">
+                  <use href="/img-titl-pg/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="https://web.telegram.org/z/" target="_blank">
+                <svg class="footer-icon">
+                  <use href="/img-titl-pg/sprite.svg#telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/?lang=ru" target="_blank">
+                <svg class="footer-icon">
+                  <use href="/img-titl-pg/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+        </div>
+
+
+      
+      </div>
+    </div>
+  </body>
+</html>
+
+
+
+<!-- <ul class="icon-list footer-list">
             <li>
               <a href="https://www.messenger.com/?locale=ru_RU" target="_blank">
                 <svg class="footer-icon">
@@ -130,9 +179,4 @@
                 <span>Twitter</span>
               </a>
             </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+          </ul> -->
