--- a/startpage.html
+++ b/startpage.html
@@ -101,8 +101,9 @@
             <h2>Social-media</h2> 
 
         <div class="hover-footer">
-          <h2>Social-media</h2> 
+          <h2 class="title-social">Social-media</h2> 
            <ul class="icon-list footer-list">
+            
             <li>
               <a href="https://www.messenger.com/?locale=ru_RU" target="_blank">
                 <svg class="footer-icon">
