fixed social icons

--- a/startpage.html
+++ b/startpage.html
@@ -101,7 +101,9 @@
             <h2>Social-media</h2> 
 
         <div class="hover-footer">
-          <h2 class="title-social">Social-media</h2> 
+          <div class="title-social">
+            <h2>Social-media</h2> 
+          </div>
            <ul class="icon-list footer-list">
             
             <li>
