added gradient and animation

--- a/startpage.html
+++ b/startpage.html
@@ -96,8 +96,9 @@
       </section>
 
       <div class="footer-startpage">
-        <div class="container-startpage">
-          Footer
+        <div class="marque">
+          <p class="content">(c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer *</p>
+          <p class="content">(c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer * (c)Footer *</p>  
         </div>
      
       </div>
