fixed bugs in hover me

--- a/startpage.html
+++ b/startpage.html
@@ -108,37 +108,39 @@
       <div class="title-social">
         <h2>Hover me!</h2> 
       </div>
-       <ul class="icon-list footer-list">
+      <div class="hover-box">
+        <ul class="icon-list footer-list">
         
-        <li>
-          <a href="https://www.messenger.com/?locale=ru_RU" target="_blank">
-            <svg class="footer-icon">
-              <use href="/img-titl-pg/sprite.svg#facebook"></use>
-            </svg>
-             </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/" target="_blank">
-            <svg class="footer-icon">
-              <use href="/img-titl-pg/sprite.svg#instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://web.telegram.org/z/" target="_blank">
-            <svg class="footer-icon">
-              <use href="/img-titl-pg/sprite.svg#telegram"></use>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/?lang=ru" target="_blank">
-            <svg class="footer-icon">
-              <use href="/img-titl-pg/sprite.svg#twitter"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+          <li>
+            <a href="https://www.messenger.com/?locale=ru_RU" target="_blank">
+              <svg class="footer-icon">
+                <use href="/img-titl-pg/sprite.svg#facebook"></use>
+              </svg>
+               </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank">
+              <svg class="footer-icon">
+                <use href="/img-titl-pg/sprite.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://web.telegram.org/z/" target="_blank">
+              <svg class="footer-icon">
+                <use href="/img-titl-pg/sprite.svg#telegram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/?lang=ru" target="_blank">
+              <svg class="footer-icon">
+                <use href="/img-titl-pg/sprite.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
