--- a/Amelia/index.html
+++ b/Amelia/index.html
@@ -20,6 +20,7 @@
           <div class="header-logo">
             <img src="images/logo.svg" alt="logo" width="155" height="39" />
           </div>
+          <span class="burger"></span>
           <ul class="menu">
             <li><a href="#">Главная</a></li>
             <li><a href="#about_us">О нас</a></li>
@@ -41,9 +42,11 @@
               вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
               на латинице с начала XVI века.
             </p>
-            <button class="order-bt">Заказать букет</button>
+            <div class="but-sec">
+              <button class="order-bt">Заказать букет</button>
             <a href="#footer">Помощь флориста</a>
-          </div>
+              </div>
+              </div>
           <div class="main-img">
             <img src="images/flower.jpg" alt="flowers" />
           </div>
