fixed bugs at adapt

--- a/Amelia/index.html
+++ b/Amelia/index.html
@@ -20,7 +20,9 @@
           <div class="header-logo">
             <img src="images/logo.svg" alt="logo" width="155" height="39" />
           </div>
-          <span class="burger"></span>
+          <div class="burger">
+            <span></span>
+          </div>
           <ul class="menu">
             <li><a href="#">Главная</a></li>
             <li><a href="#about_us">О нас</a></li>
